--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -1,13 +1,16 @@
 * {
-  font-family: Helvetica, Arial, sans-serif;
+  font-family: 'Montserrat', sans-serif;
   margin: 0;
 }
-html,
-body {
-  height: 100vh;
-  width: 100vw;
-}
+
 main {
   width: 100%;
 }
-
+.inputValidationMsg {
+  font-size: 0.7rem;
+  color: #bb0808;
+}
+.spinnerLoading {
+  font-size: 2rem;
+  color: $green;
+}
