add layout view players

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -10,7 +10,10 @@
 @import './components/buttons';
 @import '../components/UI/HeaderMovil/HeaderMovil.scss';
 @import '../components/auth/LoginForm/LoginForm.scss';
+@import '../components/players/PlayerCard/PlayerCard.scss';
 
 //UI
 @import '../components/UI/Sidebar/Sidebar.scss';
 @import '../components/UI/inputs/InputText/InputText.scss';
+@import '../components/UI/InputSearch/InputSearch.scss';
+@import '../components/UI/Pagination/Pagination.scss';
