--- a/src/components/UI/InputSearch/InputSearch.scss
+++ b/src/components/UI/InputSearch/InputSearch.scss
@@ -2,11 +2,12 @@
   display: flex;
   align-items: center;
   background: #fff;
-  width: 65%;
-  height: 45px;
-  border-radius: 14px;
+  width: 100%;
+  height: 38px;
+  border-radius: 6px;
   padding: 2px 10px;
   position: relative;
+  border: 1px solid silver;
 }
 .inputSearch input {
   background: none;
