layout view teams

--- a/src/styles/components/_buttons.scss
+++ b/src/styles/components/_buttons.scss
@@ -1,3 +1,12 @@
+.btn-primary {
+  background: $blue;
+}
+.btn-primary:hover {
+  background: $blue;
+}
+.btn-primary:focus {
+  background: $blue;
+}
 .btn__login {
   outline: none;
   width: 100%;
