--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -5,6 +5,7 @@
 // Pages
 @import '../pages/Auth/LoginScreen/LoginScreen.scss';
 @import '../pages/User/Dashboard/DashboardAdmin.scss';
+// @import '../pages/User/Dashboard/Dash';
 
 //Components
 @import './components/buttons';
