--- a/src/components/players/PlayerCard/PlayerCard.scss
+++ b/src/components/players/PlayerCard/PlayerCard.scss
@@ -6,6 +6,26 @@
 .playerCard__image {
   width: 100%;
   height: 120px;
+  position: relative;
+}
+.playerCard__image button {
+  position: absolute;
+  width: 30px;
+  height: 30px;
+  color: $blue;
+  background: #fff;
+  border-radius: 100%;
+  font-size: 1rem;
+  right: 0;
+  border-color: $blue;
+  transition: 1s ease all;
+}
+.playerCard__image button:hover {
+  position: absolute;
+  color: #fff;
+  border-color: $blue;
+  background: $blue;
+  transition: 1s ease all;
 }
 .playerCard_name {
   text-align: center;
