--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -12,6 +12,7 @@
 @import '../components/UI/HeaderMovil/HeaderMovil.scss';
 @import '../components/auth/LoginForm/LoginForm.scss';
 @import '../components/players/PlayerCard/PlayerCard.scss';
+@import '../components/players/ModalPlayerDetails/ModalPlayerDetails.scss';
 
 //UI
 @import '../components/UI/Sidebar/Sidebar.scss';
