add modal for chargeData

--- a/src/styles/base/_privatePages.scss
+++ b/src/styles/base/_privatePages.scss
@@ -17,7 +17,7 @@
   width: 6px;
 }
 .privatePages__main::-webkit-scrollbar-thumb {
-  background: $green;
+  background: $blue;
   border-radius: 10px;
 }
 .privatePages__main::-webkit-scrollbar-track {
