--- a/src/styles/components/_buttons.scss
+++ b/src/styles/components/_buttons.scss
@@ -4,8 +4,14 @@
 .btn-primary:hover {
   background: $blue;
 }
+.btn-primary:active {
+  background: $blue !important;
+}
+.btn-primary:visited {
+  background: $blue !important;
+}
 .btn-primary:focus {
-  background: $blue;
+  background: $blue !important;
 }
 .btn__login {
   outline: none;
