integration filters player wit api

--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -14,3 +14,11 @@ main {
   font-size: 2rem;
   color: $green;
 }
+.css-9gakcf-option {
+  background-color: #fff !important;
+  color: #000 !important;
+}
+.css-9gakcf-option:hover {
+  background-color: $blue !important;
+  color: #fff !important;
+}
