integration view search player with teams

--- a/src/components/UI/InputSearch/InputSearch.scss
+++ b/src/components/UI/InputSearch/InputSearch.scss
@@ -9,6 +9,10 @@
   position: relative;
   border: 1px solid silver;
 }
+.inputSearch__label {
+  font-size: 0.8rem;
+  color: $blue;
+}
 .inputSearch input {
   background: none;
   border: none;
